@@ -4,6 +4,8 @@ Revision history for Perl extension Util::H2O.
 	- WARNING: Potentially Incompatible Changes:
 		- the constructor generated by the "-new" option now locks
 		  the new object's keyset (unless "-lock" is disabled)
+		- the "-recurse" option now passes down the value of the
+		  "-lock" option to nested hashes
 	- documented AUTOLOAD and added tests
 
 0.10	Mon, Jun  1 2020	commit 6db2a1d4cdf1a82ad2efe00f402a9596fa14cbfa
